# data-finder

./: .gitignore  README.md  attribute.py  design_notes.txt  kdb_engine.py  main.py  operation.py  pykx_trade.py  pyproject.toml  pyrightconfig.json  q_setup.txt  requirements.txt  setup.py  sql_alchemy_trade.py  typed_attributes.py  typed_operations.py
.claude/: CLAUDE.md
.github/workflows/: publish.yml  python-package.yml
calc/: simple_price.py
calc/tests/: test_calc.py
data/: accounts.csv  contractualpositions.csv  entities.csv  eod_denorm_contract_extract.csv  prices.csv  trades.csv
datafinder/: __init__.py  attribute.py  operation.py  typed_attributes.py  typed_operations.py
datafinder/tests/: test_runner.py  test_sql_generator.py
datafinder_databricks/tests/: test_databricks_engine.py  test_databricks_output_types.py
datafinder_duckdb/: duckdb_engine.py
datafinder_duckdb/tests/: test_datafinder_duckdb.py  test_duckdb_output_types.py  test_exists_e2e.py  test_is_none_e2e.py  test_left_outer_join_e2e.py
datafinder_examples/tests/: test_datafinder_examples.py
datafinder_generator/tests/: test_generator.py
datafinder_graphql/tests/: mock_graphql_server.py  test_graphql.py  test_graphql_e2e.py  test_specs_finance_graphql.py
datafinder_ibis/: ibis_engine.py
datafinder_ibis/tests/: test_ibis_engine.py
datafinder_ibis_duckdb/tests/: companies_mapping.md  diamond_mapping.md  null_end_milestoning_mapping.md  orgchart_inheritance_mapping.md  positions_mapping.md  positions_model.md  test_datafinder_ibis_duckdb.py  test_e2e_count.py  test_e2e_date_functions.py  test_e2e_group_by.py  test_e2e_group_by_trade.py  test_e2e_inheritance.py  test_e2e_join_filters.py  test_e2e_limit.py  test_e2e_markdown.py  test_e2e_multihop_joins.py  test_e2e_null_end_milestoning.py  test_e2e_numeric_functions.py  test_e2e_orgchart.py  test_e2e_sort.py  test_e2e_string_operations.py  test_e2e_string_scalar_functions.py  test_e2e_window_functions.py  test_specs_companies.py  test_specs_companies_scalar.py  test_specs_diamond.py  test_specs_embedded.py  test_specs_finance.py  test_specs_finance_group_by.py  test_specs_finance_numeric.py  test_specs_null_end_milestoning.py  test_specs_orgchart.py  test_specs_orgchart_inheritance.py  test_specs_positions.py
datafinder_iceberg/tests/: finance_catalog_mapping.md  test_iceberg_catalog.py  test_iceberg_catalog_reader.py  test_iceberg_catalog_reader_memory.py  test_iceberg_catalog_sql.py  test_iceberg_loader.py  test_iceberg_reader.py  test_iceberg_refresh.py
datafinder_kdb/: __init__.py  kdb_engine.py
datafinder_linkml/tests/: finance.yaml  test_linkml_loader.py
example/: mappings.py  queries.py  refresh_mapping.py  refresh_mapping_iceberg.py  setup_test_data.py  trade_mapping.py
example_duckdb/: __init__.py  duckdb_example.py  duckdb_trade_finder.py
example_ibis/: ibis_example.py  ibis_gen.py  ibis_trade_finder.py
example_ibis/templates/: finder_template.txt
example_kdb/: __init__.py  kdb_example.py  kdb_trade_finder.py
graphql_rust_generator/tests/: test_rust_generator.py
mapping_markdown/tests/: finance.md  finance_mapping.md  finance_mapping_split.md  finance_trade.md  orgchart.md  orgchart_mapping.md  ref_data_mapping.md  test_draft_mapping.py  test_graphql_markdown_mapping.py  test_markdown_mapping.py  test_refresh_mapping.py  test_validate.py  trading_mapping.md
model/: m3.py  mapping.py  relational.py
model/tests/: test_m3.py  (+2 more)
(+97 files in other folders)
