[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "datafinder"
version = "0.0.1"

[tool.setuptools]
    packages = ['datafinder','datafinder_generator','datafinder_duckdb','example','example_duckdb','model','calc']
    package-dir = { "calc" = "calc/src", "model" = "model/src", "datafinder" = "datafinder/src", "datafinder_generator" = "datafinder_generator/src" }

[project]
name = "datafinder"
version = "0.0.1"
authors = [
  { name="Jackie Haynes" },
]
description = "Generated data finders"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "calc/src", "datafinder/src", "datafinder_generator/src", "model/src", "example", "datafinder_ibis/src"
]