[project]
name = "data-finder"
version = "0.1.7"
description = "Model driven data finders"
readme = "README.md"
license = { text = "Apache Software License" }
classifiers = [
  "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]
ibis = [
    "ibis-framework~=9.0.0",
]
duckdb = [
    "duckdb~=1.0.0",
]
linkml = [
    "linkml-runtime>=1.9.5",
]
iceberg = [
    "pyiceberg>=0.10.0",
]
markdown = [
    "markdown-it-py>=3.0.0",
]


[tool.setuptools.packages.find]
where = ["datafinder/src", "datafinder_generator/src", "model/src", "datafinder_duckdb/src", "datafinder_ibis/src", "datafinder_linkml/src", "datafinder_iceberg/src", "model_markdown/src", "mapping_markdown/src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
datafinder_generator = ["templates/*.txt"]


[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "calc/src", "datafinder/src", "datafinder_generator/src", "model/src", "example", "datafinder_ibis/src", "datafinder_duckdb/src", "datafinder_linkml/src", "datafinder_iceberg/src", "model_markdown/src", "mapping_markdown/src"
]
