[project]
name = "data-finder"
version = "0.1.8"
description = "Model driven data finders"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
]
ibis = [
    "ibis-framework~=12.0.0",
    "pyarrow>=24.0.0",
    "pyarrow-hotfix>=0.7",
]
duckdb = [
    "duckdb>=1.0.0",
]
linkml = [
    "linkml-runtime>=1.9.5",
]
iceberg = [
    "pyiceberg>=0.11.0",
]
iceberg-test = [
    "sqlalchemy>=2.0.0",
]
markdown = [
    "markdown-it-py>=4.0.0",
]


[tool.setuptools.packages.find]
where = ["datafinder/src", "datafinder_generator/src", "model/src", "datafinder_duckdb/src", "datafinder_ibis/src", "datafinder_linkml/src", "datafinder_iceberg/src", "model_markdown/src", "mapping_markdown/src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
datafinder_generator = ["templates/*.txt"]


[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "calc/src", "datafinder/src", "datafinder_generator/src", "model/src", "example", "datafinder_ibis/src", "datafinder_duckdb/src", "datafinder_linkml/src", "datafinder_iceberg/src", "model_markdown/src", "mapping_markdown/src"
]
